--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.3",
     "web-vitals": "^1.1.2"
   },
@@ -46,5 +47,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.17"
   }
 }
